[build-system]
requires = [
  "setuptools >= 70.0",
  "wheel"                  # to build wheels
]
build-backend = "setuptools.build_meta"

[project]
name = "skydrive"
version = "0.1.0"
description = "Your package description here"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Weijiang Xiong", email = "weijiangxiong1998@gmail.com" },
]
dependencies = [  
  "matplotlib",
  "numpy",
  "pandas",
  "seaborn",
  "pyproj",
  "shapely"
]

[tool.setuptools.packages.find]
include = ["skydrive*"]

[tool.ruff]
target-version = "py39"
# line length
line-length = 110

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 128
